<resources>
    <string name="app_name">EasyGas</string>
    <string name="findagads">Find a gas</string>
    <string name="deliveryboy">Delivery boys</string>
    <string name="vendor">Vendor</string>
    <string name="name">Name</string>
    <string name="surname">SurName</string>
    <string name="phone">Phone</string>
    <string name="selectcity">Select City</string>
    <string name="selectarea">Select Area</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="otp">Enter Your OTP</string>
    <string name="newpass">Enter New Password</string>
    <string name="conpass">Confirm Password</string>
    <string name="password">Password</string>
    <string name="repassword">Repassword</string>
    <string name="submit">Submit</string>
    <string name="login">LogIn</string>
    <string name="resetpass">Reset Password</string>
    <string name="submitcode">Submit Code</string>
    <string name="submitpass">Submit Pass</string>
    <string name="createnewuser">Create account</string>
    <string name="forgottonpass">Forgotten Password</string>
    <string name="enteremail">Enter email</string>
    <string name="enterpassword">Enter password</string>
    <string name="permission_denied">Permission denied</string>
    <string name="error_invalid_user">Invalid username or password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="signwithother">Sign With Other</string>
    <string name="checkbox">Remember Me</string>
    <string name="navheader">Welcome</string>
    <string name="navheader1">Make Your Easy Gas</string>
    <string name="quntity">Enter Quantity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="aboutus">About Us</string>
    <string name="orderlist">Order List</string>
    <string name="mywallet">My Wallet</string>
    <string name="logout">Log Out</string>
    <string name="currentbalance">Current Balance</string>
    <string name="paymenthistory">Payment History</string>
    <string name="addmoney">Add Money</string>
    //order
    <string name="date">Date</string>
    <string name="orderstatus">Order Status</string>
    <string name="payment_type">Payment Type</string>
    <string name="quantity">Quantity</string>
    <string name="totalprice">Total Price</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="selectgas">Select Gas</string>
    <string name="loading">Loading</string>


</resources>
