<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@android:color/white"
        android:src="@drawable/ic_splash" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_login_signwithother"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:text="@string/signwithother"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/activity_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/corner_white"
                android:drawableLeft="@drawable/ic_email"
                android:gravity="center"
                android:hint="@string/enteremail"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/activity_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/corner_white"
                android:drawableLeft="@drawable/ic_password"
                android:gravity="center"
                android:hint="@string/enterpassword"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_13sdp"
                android:checked="false"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/checkbox"
                android:textColor="@color/white"
                android:theme="@style/MyCheckBox" />

            <TextView
                android:id="@+id/activity_login_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/corner_blue"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_login_signup"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/createnewuser"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/activity_login_forgotpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/forgottonpass"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>