<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="easygas.app.com.easygas.Adapter.adapter_order_list">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

    <LinearLayout
        android:id="@+id/adapter_order_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textColor="@color/white"
            android:text="@string/date"
            android:layout_marginLeft="@dimen/_18sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textColor="@color/white"
            android:text="@string/orderstatus"
            android:layout_marginLeft="@dimen/_18sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textColor="@color/white"
            android:text="@string/payment_type"
            android:layout_marginLeft="@dimen/_18sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_18sdp"
            android:text="@string/quantity"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_18sdp"
            android:text="@string/totalprice"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/adapter_order_list_date"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/adapter_order_list_orderstatus"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/adapter_order_list_paymenttype"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_18sdp"/>
        <TextView
            android:id="@+id/adapter_order_list_quantity"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/adapter_order_list_totalprice"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>
