<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:weightSum="2"
        android:layout_height="124dp">
    <ImageView
        android:layout_width="323dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_weight="1.8"
        android:src="@drawable/ic_splash" />
        <ImageView
            android:id="@+id/ivcancel"
            android:layout_width="41dp"
            android:layout_height="27dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_weight="0.2"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/ic_cancel"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/forgot" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_23sdp"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="@dimen/_20sdp">
        <EditText
            android:id="@+id/activity_forgotpass_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/corner_white"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/activity_forgotpass_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/corner_white"
                android:gravity="center"
                android:hint="@string/otp"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/activity_forgotpass_newpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/corner_white"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorPrimary" />
            <EditText
                android:id="@+id/activity_forgotpass_confirmpasspassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/corner_white"
                android:gravity="center"
                android:hint="@string/newpass"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:id="@+id/activity_forgotpass_resetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="19dp"
                android:background="@drawable/corner_blue"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/resetpass"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/activity_forgotpass_submitcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="19dp"
                android:background="@drawable/corner_blue"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/submitcode"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/activity_forgotpass_submitpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="19dp"
                android:background="@drawable/corner_blue"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/submitpass"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
