<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="easygas.app.com.easygas.Fragment.fragment_mywallet"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:weightSum="2">

        <TextView
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:text="@string/currentbalance"
            android:textSize="@dimen/_15sdp"
            android:layout_weight="1"
            android:textColor="@color/text"
            android:layout_marginLeft="@dimen/_7sdp"
            android:gravity="left|center"/>

        <TextView
            android:id="@+id/fragment_mywallet_balancetv"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/text"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="1"/>
    </LinearLayout>


    <TextView
        android:id="@+id/fragment_mywallet_addmoneytv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_corner"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/addmoney"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginLeft="@dimen/_17sdp"
        android:layout_marginRight="@dimen/_17sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/paymenthistory"
            android:textColor="@color/text"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>
